# plumacalc

./: .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml
Plumacalc/: asgi.py  settings.py  urls.py  wsgi.py
calculator/: forms.py  models.py  urls.py  views.py
calculator/migrations/: 0001_initial.py  0002_history_created.py  0003_history_errors.py  0004_alter_history_answer.py
calculator/static/css/: calc.css
calculator/static/js/: script.js
calculator/templates/: base.html  buttons.html  calculator.html  history.html  history_navbar.html  naviagation_bar.html  postfix_result.html
calculator/templates/calculator/: history.html  index.html
