[tool.poetry]
name = "plumacalc"
version = "1.4.1"
description = "Simple but Beautiful Postfix Calculation"
authors = ["Mahdi Haghverdi <mahdihaghverdiliewpl@gmail.com>"]
readme = "README.md"
license = "Apache2.0"
keywords = [
    "postfix",
    "calculator",
    "parse",
    "tokenize"
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2.16"
black = "^22.12.0"
postfixcalc = "^0.8.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.1"
mypy = "^0.982"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
